# simulatedtom

./: .env.template  .gitignore  README.md  pyproject.toml
code/: evaluate_bigtom.py  llm_utils.py
