[tool.poetry]
name = "simulatedtom"
version = "0.1.0"
description = ""
authors = ["vintro <vince@plasticlabs.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wandb = "^0.16.1"
openai = "^1.3.9"
torch = "^2.1.1"
mistralai = "^0.0.8"
python-dotenv = "^1.0.0"
transformers = "^4.36.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
